--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -288,9 +288,15 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 50%
+        width: 50%;
+        flex-direction: column;
     }
 
+    .hobby-icon {
+        background-color: rgb(180, 180, 188);
+        width: 3rem;
+        height: 3rem;
+    }
 
 }
 
