--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@
 body {
     flex: 1;
     background-color: rgb(194, 172, 172);
-    color: white;
+    color: rgb(0, 0, 0);
     border: 2px solid #FEFFFF;
 }
 
@@ -94,8 +94,13 @@ body {
 
     #digital-cv-section-socials ul {
         background-color: rgb(240, 144, 202);
-        text-decoration: none;
-        list-style-type: none;
+
+    }
+
+    #digital-cv-section-socials li {
+        background-color: rgb(236, 4, 4);
+        padding-left: 20px;
+
     }
 
     form label {
@@ -325,7 +330,10 @@ body {
         font-weight: bold;
     }
 
-
+    .social-icons li {
+        background-color: #17252A;
+        margin-left: 20px;
+    }
 
 }
 
