--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -302,7 +302,7 @@ body {
         width: 3rem;
         height: 3rem;
     }
-
+/* need to fix spelling */
 
     #qulification-list {
         list-style-type: disc;
