--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,8 +18,6 @@
     line-height: 1;
 }
 
-
-
 body {
     flex: 1;
     border: 2px solid #FEFFFF;
@@ -121,12 +119,11 @@ body {
 
     #digital-cv-section-socials ul {
         background-color: rgb(240, 144, 202);
-
     }
 
     #digital-cv-section-socials li {
         background-color: rgb(236, 4, 4);
-        padding-left: 20px;
+        width: 80%;
 
     }
 
@@ -184,7 +181,9 @@ body {
         border-radius: 12px;
     }
 
-    #about-me-icon {}
+    .digital-cv-section p {
+        padding: 1rem;
+    }
 
     .section-icons {
         background-color: var(--text-color);
@@ -206,7 +205,6 @@ body {
     .digital-cv-section {
         /* background-color: var(--primary-color); */
         color: var(--primary-color);
-        /* display: flex; */
         align-items: center;
         flex-direction: row;
         justify-content: flex-start;
@@ -325,6 +323,10 @@ body {
         padding: 1rem;
     }
 
+    .hobby-information-block :hover {
+        background-color: orange;
+    }
+
     .hobby-information-block {
         display: flex;
         align-items: center;
@@ -342,28 +344,23 @@ body {
 
     #qualifications-list {
         list-style-type: disc;
-        margin-left: 20px;
+        display: flex;
+        flex-direction: column;
+        padding: 1.5rem
     }
 
     #qualifications-list li section h3 {
         text-decoration: underline;
     }
 
-    #qualifications-list li section section {
+    .institution {
         display: flex;
-        align-items: baseline;
+        justify-content: center;
     }
 
-    #qualifications-list li section h4 {
-        margin-left: 10px;
-    }
-
-    #qualifications-list li section h5 {
-        /* font-weight: bold; */
-    }
-
-    #qualifications-list li section span {
+    .duration {
         font-weight: bold;
+        font-style: italic;
     }
 
     .social-icons li {
