--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -124,10 +124,15 @@ body {
     #digital-cv-section-socials {
         padding-top: 1rem;
         padding-bottom: 1rem;
+        padding-left: 1rem;
+        background-color: var(--text-color);
+        
     }
 
     #digital-cv-section-socials h3 {
-        background-color: var(--text-color);
+        background-color: var(--primary-color);
+        color: var(--text-color);
+
         display: flex;
         align-items: center;
         flex-direction: row;
